# upftii

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO.org  configure.ac
res/: Makefile.am
res/left/: Makefile.am
res/right/: Makefile.am
src/: Makefile.am  fight.cc  fight.h  fight.hh  fighter.cc  fighter.hh  game.cc  game.h  game.hh  main.cc  texutils.cc  texutils.h  texutils.hh
